--- a/src/app/shared/components/product-card/product-card.component.css
+++ b/src/app/shared/components/product-card/product-card.component.css
@@ -1,6 +1,6 @@
 .product-card {
   width: 19rem;
-  height: 24rem;
+  height: 24.5rem;
   background-color: white;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
@@ -63,6 +63,8 @@
   border-radius: 0.5rem;
   color: white;
   transition: background-color 0.3s ease;
+  border: none;
+  font-size: 16px;
 }
 
 .add-to-cart-button:hover {
