--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -31,6 +31,11 @@
   gap: 10px;
 }
 
+.navbar-right button{
+  background: transparent;
+  border: none;
+}
+
 .cart-container {
   position: relative;
   display: flex;
@@ -40,28 +45,40 @@
 .cart-icon {
   width: 40px;
   margin-right: 10px;
+  cursor: pointer;
+  padding-top: 7px;
+  background-color: transparent;
 }
 
 .cart-count {
   position: absolute;
-  top: -10px;
+  top: -5px;
   right: 0;
   background-color: blue;
   color: white;
   border-radius: 50%;
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 12px;
+  padding-top: 1px;
 }
 
 .auth-button {
-  border: 2px solid black;
-  height: 40px;
-  width: 80px;
-  border-radius: 5px;
+  background-color: #3b82f6;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  color: #000000;
+  transition: background-color 0.3s ease;
+  border: 1px solid #1a1c20 !important;
+  font-size: 16px;
+}
+
+.auth-button:hover {
+  background-color: #3368d1 !important;
+  color: #ffffff;
 }
 
 .navbar-right a {
@@ -69,7 +86,9 @@
   margin-right: 10px;
   cursor: pointer;
   font-size: 23px;
+  color: #000;
+  text-decoration: none;
 }
-.navbar-right a:hover {
-  text-decoration-line: underline;
-}
+ .navbar-right a:hover{
+  color: blue;
+ }
